0025063: Visualization - 2D objects are not displayed at some camera positions

Minimum thresolds introduced to zfit operation and to camera SetDistance() method.

Test case for issue CR25063